--- a/django/djangoApp/MyApp/templates/index.html
+++ b/django/djangoApp/MyApp/templates/index.html
@@ -1,18 +1,25 @@
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Register</title>
+    <link rel="stylesheet" href="{% static 'style.css' %}">
+</head>
+<body>
 <div class="main">
     <div class="form">
         <form method="post">
-    {% csrf_token %}
-    <div class="main">
-        <div class="form">
-            <input type="text" name="name" id="name" placeholder="Name">
-            <input type="email" name="email" id="email" placeholder="Email">
-            <input type="password" name="password" id="password" placeholder="Password">
-            <button type="submit">Sign In</button>
-        </div>
+            {% csrf_token %}
+            <input type="text" name="name" id="name" placeholder="Name" required>
+            <input type="email" name="email" id="email" placeholder="Email" required>
+            <input type="password" name="password" id="password" placeholder="Password" required>
+            <button type="submit">Register</button>
+        </form>
         {% if message %}
             <p>{{ message }}</p>
         {% endif %}
     </div>
-</form>
-    </div>
 </div>
+</body>
+</html>
